WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278045
AX context menu invocations may fail to display the context menu
https://bugs.webkit.org/show_bug.cgi?id=278045
Summary
AX context menu invocations may fail to display the context menu
Lily Spiniolas
Reported
2024-08-13 14:12:39 PDT
AX context menu invocations may fail to display the context menu.
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2024-08-13 14:18:09 PDT
<
rdar://problem/127524701
>
Lily Spiniolas
Comment 2
2024-08-13 14:18:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32133
EWS
Comment 3
2024-08-14 13:19:46 PDT
Committed
282254@main
(f04544cdadf0): <
https://commits.webkit.org/282254@main
> Reviewed commits have been landed. Closing PR #32133 and removing active labels.
EWS
Comment 4
2024-08-16 17:53:12 PDT
Committed
280938.241@safari-7619-branch
(774e05786fec): <
https://commits.webkit.org/280938.241@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1611 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug