Cherry-pick f04544cdadf0. rdar://127524701

AX context menu invocations may fail to display the context menu
    https://bugs.webkit.org/show_bug.cgi?id=278045
    rdar://127524701

    Reviewed by Tim Horton.

    -[WKWebView showContextMenuForSelection:] now calls WebPageProxy::handleContextMenuKeyEvent to prevent the context menu from failing to display when certain accessibility context menu paths are invoked.

    * Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
    (-[WKWebView showContextMenuForSelection:]):

    Canonical link: https://commits.webkit.org/282254@main

Canonical link: https://commits.webkit.org/280938.241@safari-7619-branch